# loadout.report

./: .gitignore  Cargo.toml  README.md
.run/: Delete Generated Sources.run.xml  Run api.run.xml  Run generator.run.xml
api/: Cargo.toml  Dockerfile
api/src/: lib.rs  main.rs  routes.rs
api/src/routes/: categories.rs  items.rs  players.rs
api/src/routes/categories/: filters.rs  handlers.rs  model.rs
api/src/routes/items/: filters.rs  handlers.rs  model.rs
api/src/routes/players/: filters.rs  handlers.rs  model.rs
armor/: Cargo.toml  LICENSE_MIT  index.html  index.js  package.json  wasm-worker.js
armor/data/: d2ap_armor.json
armor/src/: armory.rs  db.rs  file.rs  lib.rs  model.rs  scheduler.rs  wasm.rs  worker.rs
armor/src/model/: stats.rs
crawler/: Cargo.toml  lostSectors.json
crawler/benches/: bench_main.rs
crawler/benches/archive/: json.rs  mod.rs
crawler/src/: archive.rs  constants.rs  lib.rs  main.rs  pgcr.rs  raw.rs
crawler/src/archive/: model.rs
crawler/src/pgcr/: archive.rs  extract.rs  lost_sectors.rs
d2-api/: Cargo.toml  README.md
d2-api/.openapi-generator/: FILES
d2-api/docs/: AppApi.md  AppGetApplicationApiUsage200Response.md  AppGetBungieApplications200Response.md  ApplicationsPeriodApiUsage.md  ApplicationsPeriodApplication.md  ApplicationsPeriodApplicationDeveloper.md  ApplicationsPeriodApplicationScopes.md  ApplicationsPeriodApplicationStatus.md  ApplicationsPeriodDatapoint.md  ApplicationsPeriodDeveloperRole.md  ApplicationsPeriodSeries.md  BungieCredentialType.md  BungieMembershipType.md  CommonPeriodModelsPeriodCoreSetting.md  CommonPeriodModelsPeriodCoreSettingsConfiguration.md  CommonPeriodModelsPeriodCoreSystem.md  CommonPeriodModelsPeriodDestiny2CoreSettings.md  CommunityContentApi.md  ComponentsPeriodComponentPrivacySetting.md  ComponentsPeriodComponentResponse.md  ConfigPeriodClanBannerPeriodClanBannerDecal.md  ConfigPeriodGroupTheme.md  ConfigPeriodUserTheme.md  ContentApi.md  ContentGetContentById200Response.md  ContentGetContentType200Response.md  ContentPeriodCommentSummary.md  ContentPeriodContentItemPublicContract.md  ContentPeriodContentRepresentation.md  ContentPeriodModelsPeriodContentPreview.md  ContentPeriodModelsPeriodContentPropertyDataTypeEnum.md  ContentPeriodModelsPeriodContentTypeDefaultValue.md  ContentPeriodModelsPeriodContentTypeDescription.md  ContentPeriodModelsPeriodContentTypeProperty.md  ContentPeriodModelsPeriodContentTypePropertySection.md  ContentPeriodModelsPeriodTagMetadataDefinition.md  ContentPeriodModelsPeriodTagMetadataItem.md  ContentPeriodNewsArticleRssItem.md  ContentPeriodNewsArticleRssResponse.md  ContentRssNewsArticles200Response.md  (+958 more)
d2-api/src/: app.rs  config.rs  content.rs  destiny.rs  endpoints.rs  groupsv2.rs  ignores.rs  lib.rs  links.rs  user.rs  util.rs  wrapper.rs
d2-api/src/apis/: app_api.rs  community_content_api.rs  configuration.rs  content_api.rs  default_api.rs  destiny2_api.rs  fireteam_api.rs  forum_api.rs  group_v2_api.rs  mod.rs  preview_api.rs  social_api.rs  tokens_api.rs  trending_api.rs  user_api.rs
d2-api/src/destiny/: config.rs  definitions.rs  misc.rs
d2-api/src/destiny/definitions/: animations.rs  common.rs  items.rs  sockets.rs  sources.rs
d2-api/src/endpoints/: destiny.rs
d2-api/src/endpoints/destiny/: definitions.rs
d2-api/src/models/: _get_common_settings_200_response.rs  _get_global_alerts_200_response.rs  _get_user_system_overrides_200_response.rs  app_get_application_api_usage_200_response.rs  app_get_bungie_applications_200_response.rs  applications_period_api_usage.rs  applications_period_application.rs  applications_period_application_developer.rs  applications_period_application_scopes.rs  applications_period_application_status.rs  applications_period_datapoint.rs  applications_period_developer_role.rs  applications_period_series.rs  bungie_credential_type.rs  bungie_membership_type.rs  common_period_models_period_core_setting.rs  common_period_models_period_core_settings_configuration.rs  common_period_models_period_core_system.rs  common_period_models_period_destiny2_core_settings.rs  components_period_component_privacy_setting.rs  components_period_component_response.rs  config_period_clan_banner_period_clan_banner_decal.rs  config_period_group_theme.rs  config_period_user_theme.rs  content_get_content_by_id_200_response.rs  content_get_content_type_200_response.rs  content_period_comment_summary.rs  content_period_content_item_public_contract.rs  content_period_content_representation.rs  content_period_models_period_content_preview.rs  content_period_models_period_content_property_data_type_enum.rs  content_period_models_period_content_type_default_value.rs  content_period_models_period_content_type_description.rs  content_period_models_period_content_type_property.rs  content_period_models_period_content_type_property_section.rs  content_period_models_period_tag_metadata_definition.rs  content_period_models_period_tag_metadata_item.rs  content_period_news_article_rss_item.rs  content_period_news_article_rss_response.rs  content_rss_news_articles_200_response.rs  (+946 more)
d2-client/: Cargo.toml  build.rs
d2-client/src/: auxiliary.rs  cache.rs  id.rs  lib.rs  manifest.rs
d2-client/src/auxiliary/: content_path.rs
data/: Cargo.toml
frontend/: .gitignore  Cargo.toml  index.html  index.scss
frontend/src/: app.rs  client.rs  lib.rs  main.rs
frontend/src/components/: client.rs  fireteam.rs  mod.rs  nav.rs  profile.rs
frontend/src/components/fireteam/: provider.rs  wrapper.rs
frontend/src/components/profile/: provider.rs  selector.rs  wrapper.rs
frontend/src/components/wheel/: item.rs  mod.rs  roll.rs
frontend/src/routes/: home.rs  mod.rs  wheel.rs
openapi-generator/: Cargo.toml  fetch_spec.sh
openapi-generator/src/: lib.rs  main.rs  model.rs  schemas.rs  tree.rs
openapi-generator/src/schemas/: arrays.rs  dictionaries.rs  enums.rs  objects.rs  reference.rs
openapi-generator/src/schemas/objects/: arrays.rs  booleans.rs  dictionary.rs  enums.rs  numbers.rs  strings.rs
workbench/: .gitignore  activity_types.py  main.py
(+20 files in other folders)
