[workspace]

members = [
    "frontend",
    "api",
    "data",
    "d2-client",
    "armor",
    "crawler",
    "d2-api",
    "openapi-generator"
]


[patch.crates-io]
hyper = { git = "https://github.com/loadout-report/hyper-freebind", branch = "0.14.x" }

[profile.release]
# strip = true
# lto = true
opt-level = 3
debug = true
# opt-level = "s"
