[workspace]

members = [
    "api",
    "d2-client",
    "armor",
    "crawler",
    "openapi-generator"
]


[patch.crates-io]
hyper = { git = "https://github.com/loadout-report/hyper-freebind", branch = "0.14.x" }


[profile.release]
# strip = true
# lto = true
opt-level = 3
debug = true
# opt-level = "s"
