[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
warp = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = {version = "^1.0", features = ["derive"]}
data = {version = "0.1.0", path = "../data"}
d2-client = {version = "0.1.0", path = "../d2-client"}
serde_json = "^1.0"
serde_derive = "^1.0"
log = "0.4.17"
env_logger = "0.10.0"
tokio-graceful-shutdown = "0.12.1"
cacache = "10.0.1"
cached = "0.42.0"
