[package]
name = "armor"
version = "0.1.0"
authors = ["Carlo Field <carlo@swiss.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
data = {path = "../data", version = "0.1.0"}
rexie = "0.4"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
gloo-worker = {version = "0.2.1", features = ["futures"]}
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4.5"
itertools = "0.10.5"
phf = { version = "0.11", features = ["macros"] }
heapless = "0.7.16"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
# optional rayon dependencies
wasm-bindgen-rayon = { version = "1.0.3", optional = true}
rayon = {version = "1.6", optional = true}
serde_repr = "0.1.10"
log = "0.4.17"
wasm-logger = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
