[package]
name = "armor"
version = "0.1.0"
authors = ["Carlo Field <carlo@swiss.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
parallel = ["rayon"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "gloo-worker", "rexie", "console_error_panic_hook", "serde-wasm-bindgen", "wasm-logger"]
wasm-parallel = ["wasm-bindgen-rayon"]

[dependencies]
num = "0.4"
phf = { version = "0.11", features = ["macros"] }
itertools = "0.10.5"
heapless = "0.7.16"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.10"
log = "0.4.17"
# optional rayon dependencies
rayon = {version = "1.6", optional = true}

# wasm
gloo-worker = {version = "0.2.1", features = ["futures"], optional = true}
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.33", optional = true }
wasm-bindgen-rayon = { version = "1.0.3", optional = true}
serde-wasm-bindgen = { version = "0.4.5", optional = true }
rexie = { version = "0.4", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
futures = "0.3.25"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
