[package]
name = "d2-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls"] }
enumflags2 = { version = "0.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"