[package]
name = "d2-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls"], optional = true }
enumflags2 = { version = "0.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde_repr = "0.1.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["endpoints"]
# unstable structures, these are both subject to change and untested
unstable = ["untested"]
# untested structures, these have not been tested with live data
untested = []
# include endpoints (rather than just models)
endpoints = ["reqwest"]
clean-serialization = []
