[package]
name = "d2-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1"
reqwest = {version = "0.11.12", default-features = false, features = ["rustls-tls", "json", "cookies"]}
data = {version = "0.1.0", path = "../data"}
lru_time_cache = "0.11.11"
log = "0.4.17"
uuid = "1.1.2"
chrono = "0.4.22"
rustgie = { version = "0.2.0", features = ["rustls"] }
rustgie_types = "0.2.0"

[dev-dependencies]
tokio-test = "*"
logtest = "*"

[features]
default = ["cache"]

cache = []
