[package]
name = "d2-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11.12", default-features = false, features = ["rustls-tls", "json", "cookies"]}
thiserror = "1.0.38"
lru_time_cache = "0.11.11"
log = "0.4.17"
uuid = "1.1.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_repr = "0.1.10"
serde_with = "2.2.0"
chrono = "0.4.22"

[dev-dependencies]
tokio-test = "*"
logtest = "*"

[features]
default = ["cache"]

cache = []

[build-dependencies]
openapi-generator = {path = "../openapi-generator"}
