[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"
serde = "1"
wasm-logger = "0.2"
log = "0.4"
yew-hooks = "0.2.0"
wee_alloc = "0.4.5"
serde_json = "1"
serde_derive = "1"
data = {version = "0.1.0", path = "../data"}
stylist = {version = "0.11.0", features = ["yew_integration"]}
wasm-bindgen-futures = "0.4.33"
gloo-storage = "0.2.2"
js-sys = "0.3.60"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
gloo-net = "0.2.6"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
obfstr = "0.4.1"
# rustgie_types = { git = "https://github.com/ashakoor/rustgie" }
futures = "0.3.25"
rustgie = { git = "https://github.com/cfi2017/rustgie", default-features = false, features = ["rustls"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
anyhow = "1.0.68"
rexie = { version = "0.4.2", features = ["wee_alloc"] }

