[package]
name = "openapi-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.2.0"
convert_case = "0.6.0"
env_logger = "0.10.0"
genco = "0.17.3"
log = "0.4.17"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
